--- a/helm-dependencies/kube-prometheus-stack.env
+++ b/helm-dependencies/kube-prometheus-stack.env
@@ -5,5 +5,5 @@ HELM_REPO_URL=https://prometheus-community.github.io/helm-charts
 HELM_RELEASE=kube-prometheus-stack
 HELM_CHART=${HELM_REPO_NAME}/${HELM_RELEASE}
 HELM_VERSION=18.0.3
-HELM_VALUES_01=prometheus.values.yaml
+HELM_VALUES_01=helm-dependencies/${HELM_RELEASE}.yaml
 HELM_NAMESPACE=monitoring
