--- a/helm-dependencies/metallb.env
+++ b/helm-dependencies/metallb.env
@@ -7,7 +7,7 @@ HELM_REPO_URL=https://charts.bitnami.com/bitnami
 HELM_RELEASE=metallb
 HELM_CHART=${HELM_REPO_NAME}/${HELM_RELEASE}
 HELM_VERSION=2.5.4
-HELM_NAMESPACE=metallb
-HELM_VALUES_01=metallb.values.yaml
+HELM_NAMESPACE=${HELM_RELEASE}
+HELM_VALUES_01=helm-dependencies/${HELM_RELEASE}.yaml
 HELM_SET_01="configInline.address-pools[0].addresses[0]=${METALLB_DEFAULT_ADDRESS_POOL}"
 HELM_SET_02="speaker.secretValue=${METALLB_SPEAKER_SECRET_VALUE}"
