--- a/helm-dependencies/metrics-server.env
+++ b/helm-dependencies/metrics-server.env
@@ -4,5 +4,5 @@ HELM_REPO_URL=https://charts.bitnami.com/bitnami
 HELM_RELEASE=metrics-server
 HELM_CHART=${HELM_REPO_NAME}/${HELM_RELEASE}
 HELM_VERSION=5.8.9
-HELM_VALUES_01=metrics-server.values.yaml
+HELM_VALUES_01=helm-dependencies/${HELM_RELEASE}.yaml
 HELM_NAMESPACE=monitoring
