--- a/helm-dependencies/nginx-ingress-controller.env
+++ b/helm-dependencies/nginx-ingress-controller.env
@@ -6,3 +6,4 @@ HELM_CHART=${HELM_REPO_NAME}/${HELM_RELEASE}
 HELM_VERSION=7.6.21
 HELM_NAMESPACE=${HELM_RELEASE}
 HELM_VALUES_01=helm-dependencies/${HELM_RELEASE}.yaml
+HELM_SET_01=service.loadBalancerIP=${NETWORK_PREFIX}.255.200"
