escape $ char in bcrypt password, use date into password modified date, insert domain in ingress

--- a/helm-dependencies/argocd.yaml
+++ b/helm-dependencies/argocd.yaml
@@ -7,9 +7,9 @@ server:
   ingress:
     enabled: true
     ingressClassName: nginx
-    hosts:
-    - argocd.kind.lan
+    # hosts:
+    # - argocd.example.lan
     tls:
       - secretName: argocd-tls-certificate
-        hosts:
-          - argocd.kind.lan
+        # hosts:
+        #   - argocd.example.lan
