--- a/helm-dependencies/argocd.env
+++ b/helm-dependencies/argocd.env
@@ -6,6 +6,8 @@ HELM_CHART=${HELM_REPO_NAME}/${HELM_RELEASE}
 HELM_VERSION=3.21.0
 HELM_NAMESPACE=argocd
 HELM_VALUES_01=helm-dependencies/argocd.yaml
-ARGOCD_SERVER_ADMIN_PASSWORD_BCRYPT=$(htpasswd -nbBC 10 "" ${ARGOCD_SERVER_ADMIN_PASSWORD:-$(date +%s|sha256sum|base64|head -c 32)} | tr -d ':\n' | sed 's/$2y/$2a/')
-HELM_SET_01="configs.secret.argocdServerAdminPassword=${ARGOCD_SERVER_ADMIN_PASSWORD_BCRYPT}"
-HELM_SET_02="configs.secret.argocdServerAdminPasswordMtime=2006-01-02T15:04:05Z"
+ARGOCD_SERVER_ADMIN_PASSWORD_BCRYPT=$(htpasswd -nbBC 10 "" ${ARGOCD_SERVER_ADMIN_PASSWORD} | tr -d ':\n' | sed 's/$2y/$2a/')
+HELM_SET_01="configs.secret.argocdServerAdminPassword=${ARGOCD_SERVER_ADMIN_PASSWORD_BCRYPT//\$/\\$}"
+HELM_SET_02="configs.secret.argocdServerAdminPasswordMtime=$(date +%FT%T%Z)"
+HELM_SET_03="server.ingress.hosts[0]=argocd.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_04="server.ingress.tls[0].hosts[0]=argocd.${KIND_CLUSTER_NAME}.lan"
