--- a/helm-dependencies/kube-prometheus-stack.env
+++ b/helm-dependencies/kube-prometheus-stack.env
@@ -5,5 +5,15 @@ HELM_REPO_URL=https://prometheus-community.github.io/helm-charts
 HELM_RELEASE=kube-prometheus-stack
 HELM_CHART=${HELM_REPO_NAME}/${HELM_RELEASE}
 HELM_VERSION=18.0.3
-HELM_VALUES_01=helm-dependencies/${HELM_RELEASE}.yaml
 HELM_NAMESPACE=monitoring
+HELM_VALUES_01=helm-dependencies/${HELM_RELEASE}.yaml
+HELM_SET_01="grafana.adminPassword=${GRAFANA_ADMIN_PASSWORD}"
+HELM_SET_02="alertmanager.ingress.hosts[0]=alertmanager.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_03="alertmanager.ingress.tls[0].secretName=${HELM_NAMESPACE}.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_04="alertmanager.ingress.tls[0].hosts[0]=alertmanager.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_05="grafana.ingress.hosts[0]=grafana.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_06="grafana.ingress.tls[0].secretName=${HELM_NAMESPACE}.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_07="grafana.ingress.tls[0].hosts[0]=grafana.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_08="prometheus.ingress.hosts[0]=prometheus.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_09="prometheus.ingress.tls[0].secretName=${HELM_NAMESPACE}.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_10="prometheus.ingress.tls[0].hosts[0]=prometheus.${KIND_CLUSTER_NAME}.lan"
