--- a/helm-dependencies/kube-prometheus-stack.yaml
+++ b/helm-dependencies/kube-prometheus-stack.yaml
@@ -1,5 +1,39 @@
 # https://artifacthub.io/packages/helm/prometheus-community/kube-prometheus-stack
 # https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-prometheus-stack/values.yaml
 ---
+alertmanager:
+  ingress:
+    enabled: true
+    annotations:
+      kubernetes.io/ingress.class: nginx
+    # hosts:
+    # - alertmanager.kind.lan
+    # tls:
+      # - secretName: monitoring-tls-certificate
+      #   hosts:
+      #     - alertmanager.kind.lan
+    pathType: Prefix
 grafana:
-  enabled: false
+  enabled: true
+  ingress:
+    enabled: true
+    annotations:
+      kubernetes.io/ingress.class: nginx
+    # hosts:
+    # - grafana.example.lan
+    # tls:
+    #   - secretName: monitoring-tls-certificate
+    #     hosts:
+    #       - grafana.example.lan
+prometheus:
+  ingress:
+    enabled: true
+    annotations:
+      kubernetes.io/ingress.class: nginx
+    # hosts:
+    # - prometheus.example.lan
+    # tls:
+    #   - secretName: monitoring-tls-certificate
+    #     hosts:
+    #       - prometheus.example.lan
+    pathType: Prefix
