--- a/helm-dependencies/kube-prometheus-stack.env
+++ b/helm-dependencies/kube-prometheus-stack.env
@@ -9,11 +9,11 @@ HELM_NAMESPACE=monitoring
 HELM_VALUES_01=helm-dependencies/${HELM_RELEASE}.yaml
 HELM_SET_01="grafana.adminPassword=${GRAFANA_ADMIN_PASSWORD}"
 HELM_SET_02="alertmanager.ingress.hosts[0]=alertmanager.${KIND_CLUSTER_NAME}.lan"
-HELM_SET_03="alertmanager.ingress.tls[0].secretName=${HELM_NAMESPACE}.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_03="alertmanager.ingress.tls[0].secretName=${HELM_NAMESPACE}-tls-certificate"
 HELM_SET_04="alertmanager.ingress.tls[0].hosts[0]=alertmanager.${KIND_CLUSTER_NAME}.lan"
 HELM_SET_05="grafana.ingress.hosts[0]=grafana.${KIND_CLUSTER_NAME}.lan"
-HELM_SET_06="grafana.ingress.tls[0].secretName=${HELM_NAMESPACE}.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_06="grafana.ingress.tls[0].secretName=${HELM_NAMESPACE}-tls-certificate"
 HELM_SET_07="grafana.ingress.tls[0].hosts[0]=grafana.${KIND_CLUSTER_NAME}.lan"
 HELM_SET_08="prometheus.ingress.hosts[0]=prometheus.${KIND_CLUSTER_NAME}.lan"
-HELM_SET_09="prometheus.ingress.tls[0].secretName=${HELM_NAMESPACE}.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_09="prometheus.ingress.tls[0].secretName=${HELM_NAMESPACE}-tls-certificate"
 HELM_SET_10="prometheus.ingress.tls[0].hosts[0]=prometheus.${KIND_CLUSTER_NAME}.lan"
