--- a/helm-dependencies/gitlab.env
+++ b/helm-dependencies/gitlab.env
@@ -7,4 +7,5 @@ HELM_VERSION=5.3.0
 HELM_NAMESPACE=${HELM_RELEASE}
 HELM_VALUES_01=helm-dependencies/${HELM_RELEASE}.yaml
 HELM_SET_01="global.hosts.domain=${KIND_CLUSTER_NAME}.lan"
-HELM_SET_02="global.hosts.externalIP=${NETWORK_PREFIX}.255.201"
+HELM_SET_02="global.hosts.externalIP=${NETWORK_PREFIX}.255.200"
+HELM_SET_03="global.ingress.tls.secretName=${HELM_NAMESPACE}-tls-certificate"
