--- a/helm-dependencies/gitlab.yaml
+++ b/helm-dependencies/gitlab.yaml
@@ -37,6 +37,7 @@ gitlab-runner:
   install: true
   certsSecretName: gitlab-wildcard-tls-chain
   runners:
+    privileged: true # https://docs.gitlab.com/runner/install/kubernetes.html#running-privileged-containers-for-the-runners
     config: |
       [[runners]]
         [runners.kubernetes]
