--- a/helm-dependencies/gitlab.yaml
+++ b/helm-dependencies/gitlab.yaml
@@ -22,8 +22,8 @@
 ---
 global:
   antiAffinity: soft # soft or hard
-  # shell:
-  #   port: 22
+  shell:
+    port: 22
   #   # tcp:
   #   #   proxyProtocol: false
   # hosts:
@@ -51,21 +51,41 @@ certmanager:
   install: false
 prometheus:
   install: false
+# https://docs.gitlab.com/charts/charts/gitlab/gitlab-runner/
+# https://docs.gitlab.com/runner/install/kubernetes.html#additional-configuration
+# https://about.gitlab.com/blog/2019/07/31/docker-in-docker-with-docker-19-dot-03/
+# https://gitlab.com/gitlab-org/charts/gitlab-runner
 # https://docs.gitlab.com/runner/install/kubernetes.html#providing-a-custom-certificate-for-accessing-gitlab
+# https://gitlab.com/gitlab-org/charts/gitlab-runner/-/blob/main/values.yaml
 gitlab-runner:
   install: true
+  # image: docker:20.10.8
   certsSecretName: gitlab-wildcard-tls-chain
   runners:
-    privileged: true # https://docs.gitlab.com/runner/install/kubernetes.html#running-privileged-containers-for-the-runners
+    # https://docs.gitlab.com/charts/charts/gitlab/gitlab-runner/#using-docker-in-docker
+    # https://docs.gitlab.com/runner/install/kubernetes.html#running-privileged-containers-for-the-runners
+    privileged: true
     config: |
       [[runners]]
+        environment = ["FF_GITLAB_REGISTRY_HELPER_IMAGE=1"]
         [runners.kubernetes]
-          image = "ruby:2.6"
+          image = "docker:20.10.8"
+          poll_timeout = 180
+          privileged = true
+        [runners.kubernetes.volumes]
+          [[runners.kubernetes.volumes.empty_dir]]
+            name = "docker-certs"
+            mount_path = "/certs/client"
+            medium = "Memory"
   executor: docker
   locked: false
   tags: "docker"
   name: "docker-runner"
   runUntagged: true
+  # volumes:
+  #   - /certs/client
+  #   - /cache
+  # --docker-volumes "/certs/client"
 
 ## Persitent Volumes
 redis:
@@ -82,7 +102,7 @@ gitlab:
   gitlab-shell:
     enabled: true
     networkpolicy:
-      enabled: true
+      enabled: false
       ingress:
         enabled: true
         rules:
@@ -90,7 +110,7 @@ gitlab:
             - ipBlock:
                 cidr: 0.0.0.0/0
             ports:
-              - port: 2222
+              - port: 22
                 protocol: TCP
       egress:
         enabled: true
