gitlab: use selfsigned certificate, create PVC, empty dir /certs/client for dind

--- a/helm-dependencies/argocd.yaml
+++ b/helm-dependencies/argocd.yaml
@@ -1,9 +1,8 @@
 # https://artifacthub.io/packages/helm/argo/argo-cd
 # https://github.com/argoproj/argo-helm/blob/master/charts/argo-cd/values.yaml
----
 server:
   extraArgs:
-  - --insecure
+    - --insecure
   ingress:
-    enabled: true
+    enabled: false
     ingressClassName: nginx
