--- a/helm-dependencies/gitlab.yaml
+++ b/helm-dependencies/gitlab.yaml
@@ -59,16 +59,17 @@ prometheus:
 # https://gitlab.com/gitlab-org/charts/gitlab-runner/-/blob/main/values.yaml
 gitlab-runner:
   install: true
-  # image: docker:20.10.8
+  logLevel: debug # Configure GitLab Runner's logging level. Available values are: debug, info, warn, error, fatal, panic => ref: https://docs.gitlab.com/runner/configuration/advanced-configuration.html#the-global-section
   certsSecretName: gitlab-wildcard-tls-chain
   runners:
     # https://docs.gitlab.com/charts/charts/gitlab/gitlab-runner/#using-docker-in-docker
     # https://docs.gitlab.com/runner/install/kubernetes.html#running-privileged-containers-for-the-runners
-    privileged: true
+    # https://adamrushuk.github.io/running-kind-in-gitlab-ci-on-kubernetes/
     config: |
       [[runners]]
         environment = ["FF_GITLAB_REGISTRY_HELPER_IMAGE=1"]
         [runners.kubernetes]
+          namespace = "{{.Release.Namespace}}"
           image = "docker:20.10.8"
           poll_timeout = 180
           privileged = true
@@ -77,15 +78,12 @@ gitlab-runner:
             name = "docker-certs"
             mount_path = "/certs/client"
             medium = "Memory"
-  executor: docker
+          [[runners.kubernetes.volumes.pvc]]
+            name = "gitlab-dind-var-lib"
+            mount_path = "/var/lib/docker"
+  executor: kubernetes # https://docs.gitlab.com/runner/executors/kubernetes.html
   locked: false
-  tags: "docker"
-  name: "docker-runner"
-  runUntagged: true
-  # volumes:
-  #   - /certs/client
-  #   - /cache
-  # --docker-volumes "/certs/client"
+  cache: {}
 
 ## Persitent Volumes
 redis:
