--- a/helm-dependencies/gitlab.yaml
+++ b/helm-dependencies/gitlab.yaml
@@ -62,14 +62,13 @@ gitlab-runner:
   logLevel: debug # Configure GitLab Runner's logging level. Available values are: debug, info, warn, error, fatal, panic => ref: https://docs.gitlab.com/runner/configuration/advanced-configuration.html#the-global-section
   certsSecretName: gitlab-wildcard-tls-chain
   runners:
+    locked: false
     # https://docs.gitlab.com/charts/charts/gitlab/gitlab-runner/#using-docker-in-docker
     # https://docs.gitlab.com/runner/install/kubernetes.html#running-privileged-containers-for-the-runners
     # https://adamrushuk.github.io/running-kind-in-gitlab-ci-on-kubernetes/
     config: |
       [[runners]]
-        environment = ["FF_GITLAB_REGISTRY_HELPER_IMAGE=1"]
         [runners.kubernetes]
-          namespace = "{{.Release.Namespace}}"
           image = "docker:20.10.8"
           poll_timeout = 180
           privileged = true
@@ -81,9 +80,7 @@ gitlab-runner:
           [[runners.kubernetes.volumes.pvc]]
             name = "gitlab-dind-var-lib"
             mount_path = "/var/lib/docker"
-  executor: kubernetes # https://docs.gitlab.com/runner/executors/kubernetes.html
-  locked: false
-  cache: {}
+    executor: kubernetes # https://docs.gitlab.com/runner/executors/kubernetes.html
 
 ## Persitent Volumes
 redis:
@@ -94,40 +91,70 @@ postgresql:
   persistence:
     size: 1Gi
 gitlab:
+  # https://docs.gitlab.com/charts/charts/gitlab/webservice
+  # https://gitlab.com/gitlab-org/charts/gitlab/-/blob/master/charts/gitlab/charts/webservice/values.yaml
+  webservice:
+    enabled: true
+    hpa:
+      minReplicas: 1
+      maxReplicas: 1
+    # nodeSelector:
+    #   app: gitlab
+  # https://docs.gitlab.com/charts/charts/gitlab/sidekiq
+  sidekiq:
+    enabled: true
+    minReplicas: 1
+    maxReplicas: 1
+  # https://docs.gitlab.com/charts/charts/gitlab/gitaly
+  # https://gitlab.com/gitlab-org/charts/gitlab/-/blob/master/charts/gitlab/charts/gitaly/values.yaml
   gitaly:
     persistence:
       size: 1Gi
+  # https://docs.gitlab.com/charts/charts/gitlab/gitlab-shell
+  # https://gitlab.com/gitlab-org/charts/gitlab/-/blob/master/charts/gitlab/charts/gitlab-shell/values.yaml
   gitlab-shell:
     enabled: true
-    networkpolicy:
-      enabled: false
-      ingress:
-        enabled: true
-        rules:
-          - from:
-            - ipBlock:
-                cidr: 0.0.0.0/0
-            ports:
-              - port: 22
-                protocol: TCP
-      egress:
-        enabled: true
-        rules:
-          - to:
-            - ipBlock:
-                cidr: 10.0.0.0/8
-            ports:
-              - port: 8181
-                protocol: TCP
-              - port: 8075
-                protocol: TCP
-              - port: 53
-                protocol: UDP
-  webservice:
-    enabled: true
-    # nodeSelector:
-    #   app: gitlab
+    minReplicas: 1
+    maxReplicas: 1
+    # networkpolicy:
+    #   enabled: false
+    #   ingress:
+    #     enabled: true
+    #     rules:
+    #       - from:
+    #         - ipBlock:
+    #             cidr: 0.0.0.0/0
+    #         ports:
+    #           - port: 22
+    #             protocol: TCP
+    #   egress:
+    #     enabled: true
+    #     rules:
+    #       - to:
+    #         - ipBlock:
+    #             cidr: 10.0.0.0/8
+    #         ports:
+    #           - port: 8181
+    #             protocol: TCP
+    #           - port: 8075
+    #             protocol: TCP
+    #           - port: 53
+    #             protocol: UDP
+
+  ## https://docs.gitlab.com/charts/charts/gitlab/gitlab-grafana
+  #   gitlab-grafana:
 
 minio:
   persistence:
     size: 1Gi
+
+registry:
+  enabled: true
+  maintenance:
+    readonly:
+      enabled: false
+  hpa:
+    minReplicas: 1
+    maxReplicas: 1
+    cpu:
+      targetAverageUtilization: 75
