--- a/helm-dependencies/gitlab.env
+++ b/helm-dependencies/gitlab.env
@@ -9,3 +9,4 @@ HELM_VALUES_01=helm-dependencies/${HELM_RELEASE}.yaml
 HELM_SET_01="global.hosts.domain=${KIND_CLUSTER_NAME}.lan"
 HELM_SET_02="global.hosts.externalIP=${NETWORK_PREFIX}.255.201"
 HELM_WAIT=1
+HELM_TIMEOUT=600s
