refact import certs process

--- a/helm-dependencies/argocd.env
+++ b/helm-dependencies/argocd.env
@@ -11,4 +11,4 @@ HELM_SET_01="configs.secret.argocdServerAdminPassword=${ARGOCD_SERVER_ADMIN_PASS
 HELM_SET_02="configs.secret.argocdServerAdminPasswordMtime=$(date +%FT%T%Z)"
 HELM_SET_03="server.ingress.hosts[0]=${HELM_NAMESPACE}.${KIND_CLUSTER_NAME}.lan"
 HELM_SET_04="server.ingress.tls[0].hosts[0]=${HELM_NAMESPACE}.${KIND_CLUSTER_NAME}.lan"
-HELM_SET_05="server.ingress.tls[0].secretName=${HELM_NAMESPACE}-tls-certificate"
+HELM_SET_05="server.ingress.tls[0].secretName=argocd-tls-certificate"
