use official cert manager

--- a/helm-dependencies/cert-manager.env
+++ b/helm-dependencies/cert-manager.env
@@ -1,8 +1,8 @@
 KIND_NODES=$(kind get nodes --name ${KIND_CLUSTER_NAME})
-HELM_REPO_NAME=bitnami
-HELM_REPO_URL=https://charts.bitnami.com/bitnami
+HELM_REPO_NAME=cert-manager
+HELM_REPO_URL=https://charts.jetstack.io
 HELM_RELEASE=cert-manager
 HELM_CHART=${HELM_REPO_NAME}/${HELM_RELEASE}
-HELM_VERSION=0.1.20
+HELM_VERSION=1.6.1
 HELM_NAMESPACE=${HELM_RELEASE}
 HELM_VALUES_01=helm-dependencies/${HELM_RELEASE}.yaml
