--- a/helm-dependencies/nginx-ingress-controller.env
+++ b/helm-dependencies/nginx-ingress-controller.env
@@ -1,9 +1,9 @@
 KIND_NODES=$(kind get nodes --name ${KIND_CLUSTER_NAME})
-HELM_REPO_NAME=bitnami
-HELM_REPO_URL=https://charts.bitnami.com/bitnami
-HELM_RELEASE=nginx-ingress-controller
+HELM_REPO_NAME=ingress-nginx
+HELM_REPO_URL=https://kubernetes.github.io/ingress-nginx
+HELM_RELEASE=ingress-nginx
 HELM_CHART=${HELM_REPO_NAME}/${HELM_RELEASE}
-HELM_VERSION=7.6.21
+HELM_VERSION=4.0.6
 HELM_NAMESPACE=${HELM_RELEASE}
 HELM_VALUES_01=helm-dependencies/${HELM_RELEASE}.yaml
-HELM_SET_01="service.loadBalancerIP=${NETWORK_PREFIX}.255.200"
+HELM_SET_01="controller.service.loadBalancerIP=${NETWORK_PREFIX}.255.200"
