set ingressClassName=nginx-01

--- a/helm-dependencies/kube-prometheus-stack.env
+++ b/helm-dependencies/kube-prometheus-stack.env
@@ -17,3 +17,6 @@ HELM_SET_07="grafana.ingress.tls[0].hosts[0]=grafana.${KIND_CLUSTER_NAME}.lan"
 HELM_SET_08="prometheus.ingress.hosts[0]=prometheus.${KIND_CLUSTER_NAME}.lan"
 HELM_SET_09="prometheus.ingress.tls[0].secretName=monitoring-tls-certificate"
 HELM_SET_10="prometheus.ingress.tls[0].hosts[0]=prometheus.${KIND_CLUSTER_NAME}.lan"
+HELM_SET_11="alertmanager.ingress.ingressClassName=nginx-01"
+HELM_SET_12="grafana.ingress.ingressClassName=nginx-01"
+HELM_SET_13="prometheus.ingress.ingressClassName=nginx-01"
