--- a/helm-dependencies/argocd.env
+++ b/helm-dependencies/argocd.env
@@ -12,3 +12,4 @@ HELM_SET_02="configs.secret.argocdServerAdminPasswordMtime=$(date +%FT%T%Z)"
 HELM_SET_03="server.ingress.hosts[0]=${HELM_NAMESPACE}.${KIND_CLUSTER_NAME}.lan"
 HELM_SET_04="server.ingress.tls[0].hosts[0]=${HELM_NAMESPACE}.${KIND_CLUSTER_NAME}.lan"
 HELM_SET_05="server.ingress.tls[0].secretName=argocd-tls-certificate"
+HELM_SET_06="server.ingress.ingressClassName=nginx-01"
