--- a/helm-dependencies/grafana_loki-distributed.env
+++ b/helm-dependencies/grafana_loki-distributed.env
@@ -4,8 +4,5 @@ HELM_REPO_URL=https://grafana.github.io/helm-charts
 HELM_RELEASE=loki-distributed
 HELM_CHART=${HELM_REPO_NAME}/${HELM_RELEASE}
 HELM_VERSION=0.45.1
-HELM_NAMESPACE=monitoring
+HELM_NAMESPACE=logging
 HELM_VALUES_01=helm-dependencies/${HELM_REPO_NAME}_${HELM_RELEASE}.yaml
-MINIO_ACCESSKEY=$(kubectl get secrets/minio-credentials --context ${KUBE_CONTEXT} --namespace=minio -o jsonpath="{.data.rootUser}" | base64 -d)
-MINIO_SECRETKEY=$(kubectl get secrets/minio-credentials --context ${KUBE_CONTEXT} --namespace=minio -o jsonpath="{.data.rootPassword}" | base64 -d)
-HELM_SET_01="loki.structuredConfig.storage_config.s3=http://${MINIO_ACCESSKEY}:${MINIO_SECRETKEY}@minio.minio.svc.cluster.local:9000/loki"
