--- a/helm-dependencies/grafana_promtail.yaml
+++ b/helm-dependencies/grafana_promtail.yaml
@@ -1,5 +1,6 @@
 config:
-  lokiAddress: http://loki:3100/loki/api/v1/push
+  # lokiAddress: http://loki:3100/loki/api/v1/push
+  lokiAddress: http://loki-distributed-gateway.logging.svc.cluster.local/loki/api/v1/push
 serviceMonitor:
   enabled: false
   labels:
