add minio-credentials to querier

--- a/helm-dependencies/grafana_loki-distributed.yaml
+++ b/helm-dependencies/grafana_loki-distributed.yaml
@@ -4,6 +4,11 @@ ingester:
   extraEnvFrom:
     - secretRef:
         name: minio-credentials
+querier:
+  extraEnvFrom:
+    - secretRef:
+        name: minio-credentials
+
 loki:
   structuredConfig:
     ingester:
