--- a/helm-dependencies/minio_minio.env
+++ b/helm-dependencies/minio_minio.env
@@ -6,8 +6,11 @@ HELM_CHART=${HELM_REPO_NAME}/${HELM_RELEASE}
 HELM_VERSION=3.6.2
 HELM_NAMESPACE=${HELM_RELEASE}
 HELM_VALUES_01=helm-dependencies/${HELM_REPO_NAME}_${HELM_RELEASE}.yaml
+MINIO_API_URL=${HELM_RELEASE}-api.${KIND_CLUSTER_NAME}.lan
+MINIO_CONSOLE_URL=${HELM_RELEASE}-console.${KIND_CLUSTER_NAME}.lan
 HELM_SET_01="rootPassword=${MINIO_ADMIN_PASSWORD}"
-HELM_SET_02="ingress.hosts[0]=${HELM_RELEASE}-api.${KIND_CLUSTER_NAME}.lan"
-HELM_SET_03="consoleIngress.hosts[0]=${HELM_RELEASE}-console.${KIND_CLUSTER_NAME}.lan"
-HELM_SET_04="ingress.ingressClassName=nginx-01"
+HELM_SET_02="ingress.ingressClassName=nginx-01"
+HELM_SET_03="ingress.hosts[0]=${MINIO_API_URL}"
 HELM_SET_05="consoleIngress.ingressClassName=nginx-01"
+HELM_SET_06="consoleIngress.hosts[0]=${MINIO_CONSOLE_URL}.lan"
+HELM_SET_07="consoleIngress.tls[0].hosts[0]=${MINIO_CONSOLE_URL}.lan"
