--- a/helm-dependencies/metrics-server.yaml
+++ b/helm-dependencies/metrics-server.yaml
@@ -4,5 +4,5 @@
 apiService:
   create: true
 extraArgs:
-  kubelet-insecure-tls: true
-  kubelet-preferred-address-types: InternalIP
+  - --kubelet-insecure-tls=true
+  - --kubelet-preferred-address-types=InternalIP
